test/core/errors/identifiers_error/zs/prefix_zserio/array_field_name_error.zs
package prefix_zserio.array_field_name_error;

union Test
{
    string arrayZserio[];
    uint32 zsErIoArray[]; // zserio prefix!
};
